fix(styling): text-spacing

--- a/src/app/shared/components/content-block.component.css
+++ b/src/app/shared/components/content-block.component.css
@@ -7,6 +7,7 @@ h2 {
     text-align:center;
     font-size:1.875em;
     color:rgb(233,77,37);
+    letter-spacing:-0.05em;
 }
 
 p {
