--- a/src/app/shared/components/mega-header.component.css
+++ b/src/app/shared/components/mega-header.component.css
@@ -10,7 +10,7 @@
 }
 
 ce-header {
-    margin: 30px 50px 70px 50px;
+    margin: 30px 25px 70px 25px;
 }
 
 ce-call-to-action {
